--- a/AdminPanel/angular.json
+++ b/AdminPanel/angular.json
@@ -51,7 +51,13 @@
               "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
-              "namedChunks": true
+              "namedChunks": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -91,7 +97,8 @@
             ],
             "scripts": [
               "assets/js/core/popper.min.js",
-              "assets/js/core/bootstrap.min.js"
+              "assets/js/core/bootstrap.min.js",
+              "assets/js/material-dashboard.js"
             ]
           }
         }
