--- a/AdminPanel/angular.json
+++ b/AdminPanel/angular.json
@@ -25,7 +25,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css","node_modules/sweetalert2/src/sweetalert2.scss"
             ],
             "scripts": []
           },
